	  - X509_V_ERR_SUBJECT_NAME_EMPTY
	  - X509_V_ERR_UNSUPPORTED_SIGNATURE_ALGORITHM
	- Expose X509_get0_notBefore(), X509_getm_notBefore()
	  X509_get0_nextAfter() and X509_getm_nextAfter() that became
	  available with OpenSSL 1.1.0 and LibreSSL 2.7.0. These, and
	  the deprecated _get functions, are available, as aliases
	  when needed, with all OpenSSL and LibreSSL versions. Fixes
	  GH-367.

1.92 2022-01-12
	- New stable release incorporating all changes from developer releases 1.91_01
	  to 1.91_03.
	- Summary of major changes since version 1.90:
	  - Net::SSLeay now supports stable releases of OpenSSL 3.0.
	    - OpenSSL 3.0.0 introduces the concept of "providers", which contain
	      cryptographic algorithm implementations. Many outdated, deprecated and/or
	      insecure algorithms have been moved to the "legacy" provider, which may
	      need to be loaded explicitly in order to use them with Net::SSLeay. See
	      "Low level API: OSSL_LIB_CTX and OSSL_PROVIDER related functions" in the
	      Net::SSLeay module documentation for details.
	    - Net::SSLeay's built-in PEM_get_string_PrivateKey() function depends on
	      algorithms that have moved to the legacy provider described above; if
	      OpenSSL has been compiled without the legacy provider, the tests
	      t/local/33_x509_create_cert.t and t/local/63_ec_key_generate_key.t will
	      fail when the test suite is run.
	    - TLS 1.1 and below may only be used at security level 0 as of OpenSSL
	      3.0.0; if a minimum required security level is imposed (e.g. in an
	      OpenSSL configuration file managed by the operating system), the tests
	      t/local/44_sess.t and t/local/45_exporter.t will fail when the test suite
	      is run.
	  - Net::SSLeay now supports stable releases of LibreSSL from the 3.2 - 3.4
	    series (with the exception of 3.2.2 and 3.2.3 - see "COMPATIBILITY" in the
	    Net::SSLeay module documentation for details).